--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -6,48 +6,31 @@
   <title>Sexual Profiles</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
   <style>
-    body {
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
       font-family: 'Montserrat', sans-serif;
     }
 
-    .blue-room {
-      background-color: #064D95;
-      padding: 20px 15px 0;
-    }
-
-    .green-room {
-      background-color: #06954E;
-      padding: 20px 15px 0;
-    }
-
-    .red-room {
-      background-color: #950606;
-      padding: 20px 15px 40px;
-    }
+    .blue-room { background-color: #064D95; }
+    .green-room { background-color: #06954E; }
+    .red-room { background-color: #950606; }
 
     .logo-img {
       display: block;
-      margin: 10px auto 0;
-      max-width: 120px;
+      margin: 0 auto;
+      max-width: 125px;
       height: auto;
+      padding-top: 25px;
     }
 
     .page-title {
       text-align: center;
-      margin-top: 10px;
-      margin-bottom: 10px;
-      position: relative;
-    }
-
-    .page-title::before,
-    .page-title::after {
-      content: "";
-      display: block;
-      height: 1px;
-      background-color: white;
-      margin: 8px auto;
-      max-width: 260px;
+      padding: 10px 0;
     }
 
     .page-title h1 {
@@ -55,34 +38,29 @@
       font-style: italic;
       font-family: 'Poppins', sans-serif;
       color: white;
-      text-align: center;
-      text-shadow: 0 0 6px #5ac8fa, 0 0 12px #5ac8fa;
-      margin: 0;
+      text-shadow: 0 0 8px #00ccff, 0 0 12px #00ccff;
+      margin: 10px 0;
     }
 
-    .find-type-btn {
-      text-align: center;
-      margin: 28px 0;
+    .title-line {
+      height: 2px;
+      background-color: white;
+      width: 100%;
+      max-width: 700px;
+      margin: 0 auto;
     }
 
-    .find-type-btn a {
-      padding: 12px 26px;
-      font-size: 1.1rem;
-      font-weight: bold;
-      border-radius: 10px;
-      text-decoration: none;
-      border: 2px solid white;
-      transition: background-color 0.3s ease, transform 0.2s ease;
-      color: white;
-      display: inline-block;
+    .section {
+      padding: 30px 20px 10px 20px;
     }
 
-    .blue-btn a { background-color: #064D95; }
-    .green-btn a { background-color: #06954E; }
-    .red-btn a { background-color: #950606; }
+    .container {
+      max-width: 700px;
+      margin: 0 auto;
+    }
 
     .archetype-card {
-      margin: 35px auto;
+      margin-bottom: 50px;
       text-align: center;
     }
 
@@ -92,27 +70,39 @@
       overflow: hidden;
       display: inline-block;
       width: 100%;
-      margin-bottom: 12px;
+      margin-bottom: 16px;
     }
 
     .image-pair {
       display: flex;
-      height: 250px;
+      width: 100%;
+    }
+
+    .image-pair a {
+      width: 50%;
+      pointer-events: auto;
     }
 
     .image-pair img {
-      width: 50%;
-      height: 100%;
-      object-fit: cover;
+      width: 100%;
+      height: auto;
       display: block;
+      object-fit: contain;
+      -webkit-user-drag: none;
       pointer-events: none;
-      user-select: none;
     }
 
     .divider {
       width: 4px;
       background-color: gold;
-      height: 100%;
+    }
+
+    .slogan {
+      font-style: italic;
+      margin-top: 10px;
+      font-size: 1rem;
+      line-height: 1.4;
+      color: white;
     }
 
     h3 {
@@ -128,196 +118,173 @@
     h3 a:hover {
       text-decoration: underline;
     }
-
-    .slogan {
-      font-style: italic;
-      margin-top: 4px;
-      font-size: 1rem;
-      color: white;
-      line-height: 1.4;
-    }
   </style>
 </head>
-<body>
+<body class="blue-room">
 
-<div class="blue-room">
   <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img" />
+  <div class="title-line"></div>
   <div class="page-title">
     <h1>Sexual Profiles</h1>
   </div>
-  <div class="find-type-btn blue-btn">
-    <a href="index.html">Find Your Type</a>
-  </div>
+  <div class="title-line"></div>
 
-  <!-- Submissive -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <a href="tender-protector.html"><img src="images/tender_protector_female.jpg" alt="Tender Protector - Female"></a>
-        <div class="divider"></div>
-        <a href="tender-protector.html"><img src="images/tender_protector_male.jpg" alt="Tender Protector - Male"></a>
+  <div class="section container">
+    <!-- BLUE ROOM -->
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <a href="tender-protector.html"><img src="images/tender_protector_female.jpg" alt="Tender Protector - Female"></a>
+          <div class="divider"></div>
+          <a href="tender-protector.html"><img src="images/tender_protector_male.jpg" alt="Tender Protector - Male"></a>
+        </div>
       </div>
+      <h3><a href="tender-protector.html">Tender Protector</a></h3>
+      <p class="slogan">You lead with gravity, not volume.</p>
     </div>
-    <h3><a href="tender-protector.html">Tender Protector</a></h3>
-    <p class="slogan">You lead with gravity, not volume.</p>
-  </div>
 
-  <!-- Role Switch -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <a href="devoted-darling.html"><img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female"></a>
-        <div class="divider"></div>
-        <a href="devoted-darling.html"><img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male"></a>
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <a href="devoted-darling.html"><img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female"></a>
+          <div class="divider"></div>
+          <a href="devoted-darling.html"><img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male"></a>
+        </div>
       </div>
+      <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
+      <p class="slogan">Nothing is as kinky as loyalty.</p>
     </div>
-    <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
-    <p class="slogan">Nothing is as kinky as loyalty.</p>
-  </div>
 
-  <!-- Mood Switch -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <a href="mood-multiplier.html"><img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female"></a>
-        <div class="divider"></div>
-        <a href="mood-multiplier.html"><img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male"></a>
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <a href="heatwave.html"><img src="images/heatwave_female.jpg" alt="Heatwave - Female"></a>
+          <div class="divider"></div>
+          <a href="heatwave.html"><img src="images/heatwave_male.jpg" alt="Heatwave - Male"></a>
+        </div>
       </div>
+      <h3><a href="heatwave.html">Heatwave</a></h3>
+      <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
     </div>
-    <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
-    <p class="slogan">You match their vibe—and raise it.</p>
-  </div>
 
-  <!-- Dominant -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <a href="heatwave.html"><img src="images/heatwave_female.jpg" alt="Heatwave - Female"></a>
-        <div class="divider"></div>
-        <a href="heatwave.html"><img src="images/heatwave_male.jpg" alt="Heatwave - Male"></a>
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <a href="mood-multiplier.html"><img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female"></a>
+          <div class="divider"></div>
+          <a href="mood-multiplier.html"><img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male"></a>
+        </div>
       </div>
+      <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
+      <p class="slogan">You match their vibe—and raise it.</p>
     </div>
-    <h3><a href="heatwave.html">Heatwave</a></h3>
-    <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
   </div>
-</div>
-<!-- GREEN ROOM -->
-<div class="green-room">
-  <div class="find-type-btn green-btn">
-    <a href="index.html">Find Your Type</a>
-  </div>
+</body>
 
-  <!-- Submissive -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <a href="generous-giver.html"><img src="images/generous_giver_female.jpg" alt="Generous Giver - Female"></a>
-        <div class="divider"></div>
-        <a href="generous-giver.html"><img src="images/generous_giver_male.jpg" alt="Generous Giver - Male"></a>
+<body class="green-room">
+  <div class="section container">
+    <!-- GREEN ROOM -->
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <a href="generous-giver.html"><img src="images/generous_giver_female.jpg" alt="Generous Giver - Female"></a>
+          <div class="divider"></div>
+          <a href="generous-giver.html"><img src="images/generous_giver_male.jpg" alt="Generous Giver - Male"></a>
+        </div>
       </div>
+      <h3><a href="generous-giver.html">Generous Giver</a></h3>
+      <p class="slogan">You have so much to give, you just need someone to give it to.</p>
     </div>
-    <h3><a href="generous-giver.html">Generous Giver</a></h3>
-    <p class="slogan">You have so much to give, you just need someone to give it to.</p>
-  </div>
 
-  <!-- Role Switch -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <a href="bedroom-adventurer.html"><img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female"></a>
-        <div class="divider"></div>
-        <a href="bedroom-adventurer.html"><img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male"></a>
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <a href="promiscuous-plaything.html"><img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female"></a>
+          <div class="divider"></div>
+          <a href="promiscuous-plaything.html"><img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male"></a>
+        </div>
       </div>
+      <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
+      <p class="slogan">Are you ready for a wild ride!</p>
     </div>
-    <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
-    <p class="slogan">I'm up for anything and down to get dirty.</p>
-  </div>
 
-  <!-- Mood Switch -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <a href="promiscuous-plaything.html"><img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female"></a>
-        <div class="divider"></div>
-        <a href="promiscuous-plaything.html"><img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male"></a>
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <a href="bedroom-adventurer.html"><img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female"></a>
+          <div class="divider"></div>
+          <a href="bedroom-adventurer.html"><img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male"></a>
+        </div>
       </div>
+      <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
+      <p class="slogan">I'm up for anything and down to get down and dirty.</p>
     </div>
-    <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
-    <p class="slogan">Are you ready for a wild ride?</p>
-  </div>
 
-  <!-- Dominant -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <a href="charmer-in-charge.html"><img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female"></a>
-        <div class="divider"></div>
-        <a href="charmer-in-charge.html"><img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male"></a>
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <a href="charmer-in-charge.html"><img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female"></a>
+          <div class="divider"></div>
+          <a href="charmer-in-charge.html"><img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male"></a>
+        </div>
       </div>
+      <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
+      <p class="slogan">You don’t just take control. You make them beg for it.</p>
     </div>
-    <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
-    <p class="slogan">You don’t just take control. You make them beg for it.</p>
   </div>
-</div>
+</body>
 
-<!-- RED ROOM -->
-<div class="red-room">
-  <div class="find-type-btn red-btn">
-    <a href="index.html">Find Your Type</a>
-  </div>
-
-  <!-- Submissive -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <a href="punish-me.html"><img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female"></a>
-        <div class="divider"></div>
-        <a href="punish-me.html"><img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male"></a>
+<body class="red-room">
+  <div class="section container">
+    <!-- RED ROOM -->
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <a href="claimed-and-trained.html"><img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female"></a>
+          <div class="divider"></div>
+          <a href="claimed-and-trained.html"><img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male"></a>
+        </div>
       </div>
+      <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
+      <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
     </div>
-    <h3><a href="punish-me.html">The Punish Me</a></h3>
-    <p class="slogan">What you call defiance, I call foreplay.</p>
-  </div>
 
-  <!-- Role Switch -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <a href="the-provoker.html"><img src="images/the_provoker_female.jpg" alt="The Provoker - Female"></a>
-        <div class="divider"></div>
-        <a href="the-provoker.html"><img src="images/the_provoker_male.jpg" alt="The Provoker - Male"></a>
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <a href="the-punish-me.html"><img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female"></a>
+          <div class="divider"></div>
+          <a href="the-punish-me.html"><img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male"></a>
+        </div>
       </div>
+      <h3><a href="the-punish-me.html">The Punish Me</a></h3>
+      <p class="slogan">What you call defiance, I call foreplay.</p>
     </div>
-    <h3><a href="the-provoker.html">The Provoker</a></h3>
-    <p class="slogan">You press buttons—on purpose.</p>
-  </div>
 
-  <!-- Mood Switch -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <a href="claimed-and-trained.html"><img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female"></a>
-        <div class="divider"></div>
-        <a href="claimed-and-trained.html"><img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male"></a>
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <a href="the-provoker.html"><img src="images/the_provoker_female.jpg" alt="The Provoker - Female"></a>
+          <div class="divider"></div>
+          <a href="the-provoker.html"><img src="images/the_provoker_male.jpg" alt="The Provoker - Male"></a>
+        </div>
       </div>
+      <h3><a href="the-provoker.html">The Provoker</a></h3>
+      <p class="slogan">You press buttons—on purpose.</p>
     </div>
-    <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
-    <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
-  </div>
 
-  <!-- Dominant -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <a href="dungeon-master.html"><img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female"></a>
-        <div class="divider"></div>
-        <a href="dungeon-master.html"><img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male"></a>
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <a href="dungeon-master.html"><img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female"></a>
+          <div class="divider"></div>
+          <a href="dungeon-master.html"><img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male"></a>
+        </div>
       </div>
+      <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
+      <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
     </div>
-    <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
-    <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
   </div>
-</div>
-
 </body>
 </html>
+  
